k8s/v1.16/ingress_dashboard.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.allow-http: "false"
  name: ingress-dashboard
  namespace: kubernetes-dashboard
spec:
  tls:
  - hosts:
    - k8s.xx.xx
    secretName: secret-tls
  rules:
  - host: k8s.xx.xx
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 8443
